# word2vec

./: .gitignore  Cargo.toml  README.md
8h/: dictionary.yaml  l0_parameters  l2_parameters
src/: dictionary.rs  main.rs
