[package]
name = "word2vec"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
debug-assertions = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false
debug-assertions = false
codegen-units = 1

[dependencies]
blas-src = "0.8.0"
exotic = { path = "../exotic2/exotic" }
exotic_macro = { path = "../exotic2/exotic_macro" }
indicatif = "0.16.2"
rand_distr = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
